--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-<link rel="stylesheet" type="text/css" href="/Users/dantecardines/Desktop/weconvert/stylesheet.css" />
+<link rel="stylesheet" type="text/css" href="https://github.com/stylesheet.css" />
 	
 	<div class="gradientbox">
 	</div>
