--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-<link rel="stylesheet" type="text/css" href="https://dcardines-design.github.io/stylesheet.css" />
+<link rel="stylesheet" type="text/css" href="stylesheet.css" />
 	
 	<div class="gradientbox">
 	</div>
