--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head> 
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158346056-1"></script>
+		<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158346056-1');
+		</script>
+		<link rel="shortcut icon" type="image/png" href="favicon.png">
+	</head>
 <body>
 <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+<img class="welogo" src="weconvert_logo.png" height="28" width="44"> 
 	
 	<div class="gradientbox">
 	</div>
@@ -143,7 +156,7 @@
 		</p>
 
 		<P class="ver">
-			VER. 1
+			VER. 1.1
 		</P>
 	</div>
 
