--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		</script>
 		<link rel="shortcut icon" type="image/png" href="favicon.png">
 	</head>
+<meta name="description" content="WeConvert is the simplest and easiest to use conversion website out there."/> 
 <body>
 <link rel="stylesheet" type="text/css" href="stylesheet.css" />
 <img class="welogo" src="weconvert_logo.png" height="28" width="44"> 
