--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="shortcut icon" type="image/png" href="favicon.png">
 	</head>
 <meta name="description" content="WeConvert is the simplest and easiest to use conversion website out there."/> 
+<meta name="keywords" content="inches to pixel, pixel to inches, meters to pixel, pixel to meters, centimeters to meters"/> 
 <body>
 <link rel="stylesheet" type="text/css" href="stylesheet.css" />
 <img class="welogo" src="weconvert_logo.png" height="28" width="44"> 
