--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-	<title>WeConvert - The Best Unit Converter in the Web</title>
 	<head> 
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
+		<title>WeConvert - The Best Unit Converter in the Web</title>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158346056-1"></script>
 		<script>
@@ -13,8 +14,6 @@
 		</script>
 		<link rel="shortcut icon" type="image/png" href="favicon.png">
 	</head>
-<meta name="description" content="WeConvert is the simplest and easiest to use conversion website out there."/> 
-<meta name="keywords" content="inches to pixel, pixel to inches, meters to pixel, pixel to meters, centimeters to meters"/> 
 <body>
 <link rel="stylesheet" type="text/css" href="stylesheet.css" />
 <img class="welogo" src="weconvert_logo.png" height="28" width="44"> 
