--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head> 
+		<style>
+			@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+			</style>
+		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<title>WeConvert - The Best Unit Converter in the Web</title>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
