--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head> 
 		<style>
-			@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+			@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
 			</style>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<title>WeConvert - The Best Unit Converter in the Web</title>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
