--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head> 
+		<script data-ad-client="ca-pub-9946294989488566" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<style>
 			@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
 			</style>
