--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head> 
-		<script data-ad-client="ca-pub-9946294989488566" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<style>
 			@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
 			</style>
@@ -41,95 +40,120 @@
 		</div>
 
 	<div class="from_buttonbox">
-	
+		<li class="to_select">
 		<label>
 		<input type="radio" name="from" value="m" id="fromMETER" onclick="METERgetSelected();">
 		<span class="first"> METER </span><span class="last"> m </span>
 		<br>
 		</label>
+		</li>
 
+		<li class="to_select">
 		<label>
 		<input type="radio" name="from" value="cm" id="fromCENTIMETER" onclick="METERgetSelected();">
 		<span class="first"> CENTIMETER </span><span class="last"> cm </span>
 		<br>
 		</label>
+		</li>
 
+		<li class="to_select">
 		<label>
 		<input type="radio" name="from" value="mm" id="fromMILLIMETER" onclick="METERgetSelected();">
 		<span class="first">MILLIMETER </span><span class="last"> mm </span>
 		<br>
 		</label>
+		</li>
 
+		<li class="to_select">
 		<label>
 		<input type="radio" name="from" value="in" id="fromINCHES" onclick="METERgetSelected();">
 		<span class="first"> INCHES </span><span class="last"> in </span>
 		<br>
 		</label>
+		</li>
 		
+		<li class="to_select">
 		<label>
 		<input type="radio" name="from" value="px" id="fromPIXEL" onclick="METERgetSelected();">
 		<span class="first"> PIXEL </span><span class="last"> px </span>
 		<br>
 		</label>
+		</li>
 
+		<li class="to_select">
 		<label>
 		<input type="radio" name="from" value="p" id="fromPICA" onclick="METERgetSelected();">
 		<span class="first"> PICA </span><span class="last"> p </span>
 		<br>
 		</label>
+		</li>
 
+		<li class="to_select">
 		<label>
 		<input type="radio" name="from" value="pt" id="fromPOINT" onclick="METERgetSelected();">
 		<span class="first"> POINT </span><span class="last"> pt </span>
 		<br>
 		</label>
+		</li>
 	
 	</div>
 
 	<div class="to_buttonbox">
-		
+		<li class="to_select">
 		<label>
 			<input type="radio" name="to" value="m" id="toMETER" onclick="METERgetSelected();">
 			<span class="first"> METER </span><span class="last"> m </span>
 			<br>
 			</label>
+		</li>
 	
+		<li class="to_select">
 			<label>
 			<input type="radio" name="to" value="cm" id="toCENTIMETER" onclick="METERgetSelected();">
 			<span class="first"> CENTIMETER </span><span class="last"> cm </span>
 			<br>
 			</label>
-	
+		</li>
+			
+		<li class="to_select">
 			<label>
 			<input type="radio" name="to" value="mm" id="toMILLIMETER" onclick="METERgetSelected();">
 			<span class="first">MILLIMETER </span><span class="last"> mm </span>
 			<br>
 			</label>
-	
+		</li>
+		
+		<li class="to_select">
 			<label>
 			<input type="radio" name="to" value="in" id="toINCHES" onclick="METERgetSelected();">
 			<span class="first"> INCHES </span><span class="last"> in </span>
 			<br>
 			</label>
+		</li>
 			
+		<li class="to_select">
 			<label>
 			<input type="radio" name="to" value="px" id="toPIXEL" onclick="METERgetSelected();">
 			<span class="first"> PIXEL </span><span class="last"> px </span>
 			<br>
 			</label>
-	
+		</li>
+		
+		<li class="to_select">
 			<label>
 			<input type="radio" name="to" value="p" id="toPICA" onclick="METERgetSelected();">
 			<span class="first"> PICA </span><span class="last"> p </span>
 			<br>
 			</label>
-	
+		</li>
+			
+		<li class="to_select">
 			<label>
 			<input type="radio" name="to" value="pt" id="toPOINT" onclick="METERgetSelected();">
 			<span class="first"> POINT </span><span class="last"> pt </span>
 			<br>
 			</label>
-
+		</li>
 	</div>
 	
 
