--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<div class="to_section">
 		<form>
-			<input type="number" class="to_form" id="toValue" ondrop="return false;" onpaste="return false;" placeholder="TO" onkeyup="METERgetSelected();"/> 
+			<input type="number" class="to_form" id="toValue" ondrop="return false;" onpaste="return false;" placeholder="TO" onkeyup="METERgetSelected();" disabled/> 
 		</form>
 		</div>
 
